dapr-distributed-calendar/kubecost/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-aws-ingress
  namespace: kubecost
spec:
  ingressClassName: nginx-class
  rules:
    - host: kubecost.mtheuermann.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubecost-cost-analyzer
              port:
                number: 9090
